tests/InvalidRules/implE%3.fitch
|P(x) → Q(y)
|P(y)
|---
|Q(y) (→E) 1,2
